--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "server": "nodemon server/server.js",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "expo": "~46.0.8",
     "expo-status-bar": "~1.4.0",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "react": "18.0.0",
     "react-native": "0.69.4"
   },
