added eda branded matched fonts, renamed eda-splash to app-splash, loaded fonts within app.js, setup theming, created welcome page for workshop

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/app-icon-deep-purple.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/eda-splash.png",
+      "image": "./assets/app-splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
