--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "expo": "~46.0.8",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
