--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~46.0.8",
     "expo-constants": "~13.2.3",
     "expo-font": "~10.2.0",
+    "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
@@ -28,7 +29,7 @@
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "expo-secure-store": "~11.3.0"
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
